<resources>
    <string name="app_name">KARPOOL Passenger</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_phone">Phone Number</string>
    <string name="prompt_name">Username</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_phone">The phone number is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_search">Search</string>
    <string name="title_trips">My Trips</string>
    <string name="title_account">Account</string>


    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>


    <!-- Strings for search page -->

    <string name="search_hint">City</string>
    <string name="search_text">Where are we going?</string>
    <string name="invalid_city_text">No trips were found for the selected city</string>
    <string name="sort_time">Time (Ascending)</string>
    <string name="sort_price">Lowest Price</string>


    <!-- Strings for my trips page -->
    <string name="trips_upcoming">Upcoming</string>
    <string name="trips_past">Past</string>
    <string name="trips_none">You have no upcoming trips</string>
    <string name="past_trips_none">You have no past trips</string>


    <!-- Trip activity -->
    <string name="trip_origin">Origin</string>
    <string name="trip_destination">Destination</string>
    <string name="trip_price">Price</string>
    <string name="trip_date">Date</string>
    <string name="trip_time">Time</string>
    <string name="trip_seats">Seats Available </string>
    <string name="trip_driver">Driver</string>
    <string name="trip_rating">Rating</string>
    <string name="trip_join">JOIN TRIP</string>


    <!-- preference screen -->

    <string name="action_sign_out">Sign out</string>
    <string name="action_city">Enter your location here</string>
    <string name="action_help">Help</string>


    <!-- HELP ACTIVITY -->

    <string name="title_activity_help">HelpActivity</string>


    <string name="help_join_title">How do I join a trip?</string>
    <string name="help_join">First, make sure your current location is set in the accounts tab. If you do not set it, you will get a warning when searching for a trip. Once done, you can search for a trip in the search tab. You can sort your search either in terms of lowest price or ascending date. After selecting a specific trip, you can simply click the join button. You can also message the driver by tapping the message button. </string>


    <string name="help_leave_title">Can I leave a trip?</string>
    <string name="help_leave">Yes! All you need to do is go to the trips tab, open the desired trip, and click leave trip.</string>


    <string name="help_drop_title">Is it possible for a driver to drop me somewhere else near the destination?</string>
    <string name="help_drop">This is up to the driver. You should send them a message through the message button. The messaging option is available both before joining a trip or after.</string>

    <string name="help_rating_title">Can I rate a trip?</string>
    <string name="help_rating">Yes! Once a trip is complete, you can rate the driver. You can do this by selecting a specific past trip in the trip page.</string>






</resources>
